Bug 1328198 - Fix locale-dependence in GC statistics JSON output, r=jonco

--HG--
extra : rebase_source : 673fe9c8184afc505dd28e48190171186db76a53
extra : histedit_source : e47f033a61854e0157e8689a25ec32a504c607a8